<resources>
    <string name="app_name">Belikan</string>
    <string name="FishTextView">Cari ikan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ikan">Ikan Satu</string>
    <string name="food">Langsung dari Laut</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="cart">Keranjang</string>
    <string name="name">Total</string>
    <string name="total">Total</string>
    <string name="all">Semua</string>
    <string name="total_price">Total :</string>
    <string name="price_total">Rp. 0</string>
    <string name="pesan">Pesan</string>
    <string name="hint_password_bullets" translatable="false">●●●●●●●●</string>
    <string name="teks_deskripsi_detail_fish">Tuna segar dengan daging berwarna merah muda cerah, bertekstur padat, dan kaya rasa. Kaya akan protein, omega-3, dan vitamin, cocok untuk berbagai hidangan.\n\nTips:\n\nSimpan di kulkas 2-3 hari\nBekukan untuk penyimpanan lebih lama (hingga 6 bulan)\n\nToko Ikan Segar Indonesia - Solusi Tepat untuk Kebutuhan Ikan Segar Anda</string>
    <string name="teks_rating_detail_fish">Kualitas ikan baik dan segar, pengemasan sangat baik, ikan datang dengan selamat. Terima kasih Ikan Segar Indonesia dan Belikan, sukses selalu.</string>
    <string name="text_chat_reply">Tanda ikan yang sudah tidak segar:\n1. Kulit ikan berwarna suram, pucat, dan banyak mengandung lendir\n2.Berbau asam/busuk\n3.Daging bertekstur sangat lunak\n4.Mata ikan cenderung cekung</string>
    <string name="title_onboarding_1">Belanja Ikan Mudah, Tanpa Ribet</string>
    <string name="teks_onboarding_1">Lewati pasar basah yang ramai, lupakan ribetnya memilih ikan. Belanja ikan mudah, tanpa ribet dengan Belikan. Nikmati kemudahan memesan ikan segar berkualitas langsung dari nelayan, kapanpun dan dimanapun.</string>
    <string name="teks_onboarding_2">Dapatkan ikan segar berkualitas langsung dari nelayan terpercaya, dengan chatbot yang siap membantu Anda menemukan ikan favorit, menjawab pertanyaan, dan memberikan tips memasak yang lezat.</string>
    <string name="title_onboarding_2">Bingung Pilih Ikan?\nChatbot Kami Siap Memandu!</string>
    <string name="title_onboarding_3">Dukung Nelayan Lokal, \nNikmati Ikan Segar</string>
    <string name="teks_onboarding_3">Dengan membeli ikan di Belikan, kita tidak hanya mendapatkan ikan berkualitas tinggi, tetapi juga membantu meningkatkan ekonomi masyarakat pesisir, menjaga kelestarian laut, dan mendukung praktik penangkapan ikan yang berkelanjutan.</string>
</resources>